# nrf52840-mdk-transmitter

./: CMakeLists.txt  Makefile  main.c
config/: sdk_config.h
